<resources>
    <string name="app_name">EterationTestCaseApp</string>
    <string name="title_home">E-Market</string>
    <string name="title_cart">Cart</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="toast_message_helper_logo_image">Toast message helper logo image</string>
    <string name="complete">Complete</string>
    <string name="total">Total:</string>
    <string name="cd_cart_icon">Cart Icon</string>
    <string name="you_haven_t_added_any_products_yet">You haven\'t added any products yet</string>
    <string name="favorite_info_text">You haven\'t added any products to favorites yet</string>
    <string name="when_you_add_a_product_it_will_appear_here">When you add a product, it will appear here.</string>
    <string name="favorite_added_info">When you add a product to favorites, it will appear here.</string>
    <string name="max_price">Max Price:</string>
    <string name="favorite_items">Favorite Items</string>
    <string name="items_in_cart">Items in Cart</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="price_format">%s ₺</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">Price:</string>
    <string name="this_is_favorite_items_fragment">This is Favorite items fragment</string>
    <string name="my_info_text">This app was made by Hakan Çevik.\n It is an Eteration test case application.\n\nContact: E-mail: hakanxcevik7@gmail.com</string>
    <string name="check_your_internet_connection">Check your internet connection.</string>
    <string name="loading">Loading…</string>
    <string name="cd_star_icon">star icon</string>
</resources>