<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filterDialogFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">


    <TextView
        android:id="@+id/maxPriceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:text="@string/max_price"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/priceMaxSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:value="0f"
        android:valueFrom="0f"
        android:valueTo="1000f" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/favoriteSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_items"
        android:textColor="?attr/colorOnBackground" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/cartSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:text="@string/items_in_cart"
        android:textColor="?attr/colorOnBackground" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/apply"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/cancel"
        android:textAllCaps="false" />
</LinearLayout>
